fixed headers' alignment

--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 header {
   text-align: center;
-  background-color: lightgray
+  background-color: lightgray;
+  padding: 10px;
+  margin-right: auto;
+  width: 60%;
+  margin-left: auto;
 }
 h3 {
   font-size: 30px;
   text-align: center;
 }
 * { 
-    background-color: #00000000;
     color: black;
 }
 #alignment {
